III-1492 ng true value as a string

--- a/src/event_form/components/uitpas-modal/event-form-uitpas-modal.html
+++ b/src/event_form/components/uitpas-modal/event-form-uitpas-modal.html
@@ -14,7 +14,7 @@
                             <td class="col-sm-6">
                                 <input type="checkbox"
                                    ng-model="$parent.checkedCardSystems[$index].cardSystemId"
-                                   ng-true-value="{{cardsystem.id}}"
+                                   ng-true-value="'{{cardsystem.id}}'"
                                    ng-false-value="'unsetMe'"
                                    ng-change="removeUnsetCardSystems(); setCardSystem(cardsystem, $index)"> {{cardsystem.name}}
                             </td>
