--- a/src/uitpas/components/uitpas-modal/event-form-uitpas-modal.html
+++ b/src/uitpas/components/uitpas-modal/event-form-uitpas-modal.html
@@ -4,42 +4,39 @@
         </button>
         <h4 class="modal-title">UiTPAS-informatie</h4>
     </div>
+
     <div class="modal-body">
         <div class="form-group">
             <div class="card-system">
-                <label>Kaartsysteem</label>
-                <div class="checkboxes">
-                    <table class="table">
-                        <tr ng-repeat="cardsystem in organizerCardSystems">
-                            <td class="col-sm-6">
+                <label>Kaartsystemen</label>
+
+                <div class="uitpas-card-system row" ng-repeat="cardSystem in ::availableCardSystems">
+                    <div class="col-sm-6">
+                        <div class="checkbox">
+                            <label>
                                 <input type="checkbox"
-                                   ng-model="$parent.checkedCardSystems[$index].cardSystemId"
-                                   ng-true-value="'{{cardsystem.id}}'"
-                                   ng-false-value="'unsetMe'"
-                                   ng-change="removeUnsetCardSystems(); setCardSystem(cardsystem, $index)"> {{cardsystem.name}}
-                            </td>
-                            <td class="col-sm-6">
-                                    <span ng-show="checkedCardSystems[$index].cardSystemId == cardsystem.id">
-                                        <span ng-if="cardsystem.distributionKeys.length > 1">
-                                            <select ng-model="$parent.checkedCardSystems[$index].distributionKeyId"
-                                                    ng-change="validate()">
-                                                <option value="">--Selecteer een verdeelsleutel--</option>
-                                                <option ng-repeat="distributionKey in cardsystem.distributionKeys"
-                                                        value="{{distributionKey.id}}">
-                                                    {{distributionKey.name}}
-                                                </option>
-                                            </select>
-                                        </span>
-                                    </span>
-                            </td>
-                        </tr>
-                    </table>
+                                       disabled="disabled"
+                                       ng-model="cardSystem.active"
+                                       ng-change="activeCardSystemsChanged()"> <span ng-bind="::cardSystem.name"></span>
+                            </label>
+                        </div>
+                    </div>
+
+
+                    <div class="col-sm-6" ng-if="cardSystem.distributionKeys.length">
+                        <select ng-model="cardSystem.assignedDistributionKey"
+                                ng-change="distributionKeyAssigned()">
+                            <option value="">--Selecteer een verdeelsleutel--</option>
+                            <option ng-repeat="distributionKey in ::cardSystem.distributionKeys"
+                                    ng-value="::distributionKey.id" ng-bind="::distributionKey.name">
+                            </option>
+                        </select>
+                    </div>
                 </div>
             </div>
         </div>
-
-
     </div>
+
     <div class="modal-footer">
         <button type="button" class="btn btn-default" ng-click="cancel()">Annuleren</button>
         <button type="button"
