--- a/src/uitpas/components/uitpas-info/uitpasInfo.html
+++ b/src/uitpas/components/uitpas-info/uitpasInfo.html
@@ -1,37 +1,18 @@
-<div class="row extra-uitpas" ng-show="showUitpasInfo">
-    <div class="extra-task" ng-class="uitpasCssClass">
+<div class="row extra-uitpas" ng-if="showUitpasInfo">
+    <div class="extra-task">
         <div class="col-sm-3">
             <em class="extra-task-label">UiTPAS</em>
             <span> </span>
             <i class="fa fa-circle-o-notch fa-spin" ng-show="savingUitpas"></i>
         </div>
         <div class="col-sm-9">
-            <div ng-show="!hasUitpasData">
-                <div class="alert alert-info" ng-show="upic.price.length === 0">
-                    <p>Dit is een UiTPAS organisator. Selecteer een prijs om specifieke UiTPAS-informatie toe te voegen.</p>
-                </div>
-                <div ng-show="upic.price.length !== 0">
-                    <button type='button' class='btn btn-primary' ng-click="openUitpasModal()">
-                        UiTPAS-informatie toevoegen
-                    </button>
-                </div>
+            <div class="alert alert-info" role="alert">
+                Aan dit aanbod hangt een UiTPAS organisatie dat het aan een of meerdere kaart-systemen koppelt.
+                Het is mogelijk dat deze systemen automatische een verdeel-sleutel aan je aanbod toekennen!
             </div>
-            <div ng-show="hasUitpasData">
-                <table class="table">
-                    <tr>
-                        <td class="col-sm-4"><strong>Kaartsysteem</strong></td>
-                        <td class="col-sm-5"><strong>Verdeelsleutel</strong></td>
-                        <td class="col-sm-3"><a class="btn btn-link" ng-click="openUitpasModal()" data-dismiss="modal">Wijzigen</a></td>
-                    </tr>
-                    <tr ng-repeat="cardsystem in checkedCardSystems">
-                        <td>{{cardsystem.cardSystemName}}</td>
-                        <td>{{cardsystem.distributionKeyName}}</td>
-                    </tr>
-                </table>
-            </div>
-            <div ng-show="uitpasError" class="alert alert-danger">
-                Er ging iets fout bij het opslaan van de UiTPAS info.
-            </div>
+
+            <card-system-selector organisation="upic.organizer" offer-data="upic.eventFormData">
+            </card-system-selector>
         </div>
     </div>
 </div>
