III-1492: Change UiTPAS notice

--- a/src/uitpas/components/uitpas-info/uitpasInfo.html
+++ b/src/uitpas/components/uitpas-info/uitpasInfo.html
@@ -12,8 +12,7 @@
 
             <div ng-if="upic.showCardSystems">
                 <div class="alert alert-info" role="alert">
-                    Aan dit aanbod hangt een UiTPAS organisatie dat het aan een of meerdere kaart-systemen koppelt.
-                    Het is mogelijk dat deze systemen automatische een verdeel-sleutel aan je aanbod toekennen!
+                    Dit is een UiTPAS activiteit.
                 </div>
 
                 <card-system-selector organisation="upic.organizer" offer-data="upic.eventFormData">
