--- a/src/management/moderation/components/moderation-offer.html
+++ b/src/management/moderation/components/moderation-offer.html
@@ -9,7 +9,9 @@
                 <span class="udb-short-info-seperator" ng-show="moc.offer.type.label && moc.offer.theme.label"> • </span>
                 <span class="udb-theme" ng-bind="moc.offer.theme.label"></span>
 
-                <h2 ng-bind="moc.offer.name"></h2>
+                <a ng-href="{{ moc.offer.url  + '/preview' }}">
+                    <h2 ng-bind="moc.offer.name"></h2>
+                </a>
             </header>
 
             <div class="content" ng-bind-html="moc.offer.description"></div>
