--- a/src/event_form/components/calendartypes/event-form-timestamp.html
+++ b/src/event_form/components/calendartypes/event-form-timestamp.html
@@ -23,6 +23,7 @@
             <udb-time
               time="timestamp"
               position="'start'"
+              method="'timestamp'"
               placeholder="Bv. 08:00"
               focus-if="timestamp.showStartHour">
           </div>
@@ -40,6 +41,7 @@
             <udb-time
                 time="timestamp"
                 position="'end'"
+                method="'timestamp'"
                 placeholder="Bv. 23:00"
                 focus-if="timestamp.showEndHour">
           </div>
