--- a/src/event_form/components/calendartypes/event-form-timestamp.html
+++ b/src/event_form/components/calendartypes/event-form-timestamp.html
@@ -21,11 +21,11 @@
           </label>
           <div class="beginuur-invullen" ng-show="timestamp.showStartHour">
             <udb-time
-              time="timestamp"
-              position="'start'"
-              method="'timestamp'"
-              placeholder="Bv. 08:00"
-              focus-if="timestamp.showStartHour">
+                    ng-model="timestamp.startHourAsDate"
+                    ng-change="hoursChanged(timestamp.startHourAsDate)"
+                    destination="{{timestamp.startHour}}"
+                    placeholder="Bv. 08:00"
+                    focus-if="timestamp.showStartHour"></udb-time>
           </div>
         </div>
         <div class="col-xs-6 einduur" ng-show="timestamp.showStartHour">
@@ -39,11 +39,11 @@
           </label>
           <div class="einduur-invullen" ng-show="timestamp.showEndHour">
             <udb-time
-                time="timestamp"
-                position="'end'"
-                method="'timestamp'"
-                placeholder="Bv. 23:00"
-                focus-if="timestamp.showEndHour">
+                    ng-model="timestamp.endHourAsDate"
+                    ng-change="hoursChanged(timestamp.endHourAsDate)"
+                    destination="{{timestamp.endHour}}"
+                    placeholder="Bv. 23:00"
+                    focus-if="timestamp.showEndHour"></udb-time>
           </div>
         </div>
       </div>
