III-1614 show all prices on event detail

--- a/src/styles/event-detail.less
+++ b/src/styles/event-detail.less
@@ -61,3 +61,7 @@ img.offer-image-thumbnail {
   max-width: 400px;
   max-height: 300px;
 }
+
+table.event-detail-price-table {
+  background-color: #fff !important;
+}
