--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -6,6 +6,14 @@
     margin-top: 10px;
   }
 
+  .alert p {
+    line-height: inherit;
+  }
+
+  .alert-link {
+    text-decoration: underline;
+  }
+
   #or-label {
     font-style: italic;
     color: @udb-gray-dark;
@@ -14,16 +22,23 @@
     text-align: center;
     display: block;
   }
+
   #step1 {
     position: relative;
   }
+
   #step1-events,
   #step1-places,
   #step2-list,
   #step3-list {
     line-height: 2.7em;
     margin-bottom: 1em;
+
+    a {
+      text-decoration: underline;
+    }
   }
+
   .title-border {
     border-bottom: 1px solid @gray;
     padding-bottom: 1em;
@@ -31,9 +46,11 @@
     font-weight: bold;
     color: @text-color;
   }
+
   .btn {
     padding: @padding-base-vertical @padding-small-horizontal;
   }
+
   .btn-chosen {
     color: @text-color;
     padding: 7px 0;
@@ -41,6 +58,7 @@
     line-height: 1.42857;
     font-style: italic;
   }
+
   .btn-chosen:before {
     content: "\f058 ";
     font-family: "FontAwesome";
@@ -49,6 +67,7 @@
     font-style: normal;
     font-size: 17px;
   }
+
   .number {
     background-color: @gray;
     border-radius: 99px;
@@ -71,6 +90,7 @@
     margin-bottom: 1em;
     background-color: @white;
   }
+
   .add-date-teaser {
     color: @udb-gray-dark;
   }
@@ -78,13 +98,16 @@
   .datepicker-cpo {
     margin-bottom: 1em;
   }
+
   .datepicker-inline {
     margin-bottom: 5px;
     width: auto;
   }
+
   .datepicker table {
     width: 100%;
   }
+
   .datepicker .table-condensed > thead > tr > th,
   .datepicker .table-condensed > tbody > tr > th,
   .datepicker .table-condensed > tfoot > tr > th,
@@ -93,10 +116,12 @@
   .datepicker .table-condensed > tfoot > tr > td {
     padding: 0;
   }
+
   .datepicker table tr td.active.active {
     background-color: @link-color;
     background-image: none;
   }
+
   #add-date-plus {
     display: block;
     margin: 0 auto;
@@ -105,17 +130,19 @@
     line-height: 1;
     text-decoration: none !important;
   }
+
   .add-date-link:hover,
   .add-date-link:focus {
     text-decoration: none !important;
-
   }
+
   #add-date-label {
     display: block;
     margin: 0 auto;
     text-align: center;
     text-decoration: underline;
   }
+
   #add-date-tip {
     font-style: italic;
     color: #999;
@@ -126,12 +153,14 @@
     padding: 15px;
     margin: 0;
   }
+
   .add-date-link,
   .add-date-link:focus *,
   .add-date-link:active * {
     text-decoration: none;
 
   }
+
   .add-date-link {
     display: inline-block;
     height: 336px;
@@ -141,25 +170,29 @@
     width: 100%;
     position: relative;
   }
+
   .day {
     height: 30px;
     line-height: 30px;
     text-align: center;
     vertical-align: top;
-
   }
+
   .datepicker th,
   .datepicker td {
     border-radius: 0;
     font-weight: normal;
   }
+
   .dow {
     color: #999;
     border-bottom: 1px solid @border-color;
   }
+
   .datepicker td {
     border-bottom: 1px solid @border-color;
   }
+
   .datepicker_icon:after {
     font-family: "FontAwesome";
     color: @udb-gray-dark;
@@ -170,33 +203,40 @@
     z-index: 9;
     display: block;
   }
+
   .datepicker-group {
     position: relative;
   }
+
   .day-prefix {
     color: @udb-gray-dark;
     margin-bottom: 0;
     font-style: italic;
     text-align: center;
-
   }
+
   .openingsuren-toevoegen-section {
     background-color: @white;
     padding: 0.5em;
     border: 1px solid @border-color;
   }
+
   .openingsuren th a {
     font-weight: normal;
   }
+
   .openingsuren {
     margin: 0;
   }
+
   .extra-row {
     padding-bottom: 0.5em;
   }
+
   .form-group .form-group {
     padding-left: 20px;
   }
+
   .tt-dataset-locaties em {
     font-style: normal;
     color: #004f94;
@@ -224,9 +264,11 @@
     font-size: 17px;
     margin-right: 6px;
   }
+
   .btn-nvt {
     color: @udb-gray-dark;
   }
+
   .extra-titel,
   .extra-beschrijving,
   .extra-leeftijd,
@@ -234,6 +276,14 @@
   .extra-prijs,
   .extra-contact {
     margin-bottom: 0.5em;
+  }
+
+  .extra-leeftijd .form-group {
+    margin: 0;
+  }
+
+  .extra-beschrijving a {
+    text-decoration: underline;
   }
 
   .description-text {
@@ -260,6 +310,7 @@
   .extra-tickets-email .checkbox {
     margin: 0;
   }
+
   .extra-tickets-telefoon .checkbox,
   .extra-tickets-email .checkbox {
 
@@ -267,22 +318,32 @@
   .extra-tickets-website .checkbox {
     margin-top: 0.5em;
   }
+
+  .meer-info a {
+    text-decoration: underline;
+    cursor: pointer;
+  }
+
   .extra-tickets .checkbox:first-child {
     margin-top: 1em;
-
   }
+
   .state {
     display: none;
   }
+
   .state-incomplete .incomplete {
     display: block;
   }
+
   .state-complete .complete {
     display: block;
   }
+
   .state-filling .filling {
     display: block;
   }
+
   .state-nvt .nvt {
     display: block;
   }
@@ -306,6 +367,7 @@
       padding: 10px;
     }
   }
+
   .image-upload-icon:before {
     color: @udb-gray-dark;
     text-align: center;
@@ -313,26 +375,32 @@
     content: "\f03e";
     font-size: 50px;
   }
+
   .image-upload-none {
     text-align: center;
     color: @udb-gray-dark;
   }
+
   .tip {
     color: #626262;
     margin-bottom: 10px;
     margin-top: 5px;
   }
+
   .tip p {
     line-height: 1.6;
   }
+
   .incomplete .btn-default {
     text-align: left;
   }
+
   .btn-plus {
     position: relative;
     margin-left: 1em;
     padding-left: 0.25em;
   }
+
   .btn-plus:before {
     content: "\f055";
     font-family: "FontAwesome";
@@ -343,38 +411,49 @@
     left: -1em;
     top: 6px;
   }
+
   .incomplete .btn-default:hover:before {
     color: #333;
   }
+
   .extra-task .fa {
     color: @udb-gray-dark;
     margin-left: 0.85em;
     margin-right: 0.25em;
   }
+
   .media-body {
     line-height: 1.3em;
   }
+
   .media-actions {
     margin-top: 10px;
   }
+
   #publiceren {
     margin-top: 2em;
     border-top: 1px solid @border-color;
     padding-top: 1em;
   }
+
   .reservatie-info {
     margin: 0.5em 0 1em 1.5em;
   }
+
   .extra-tickets-email .checkbox {
     margin-bottom: 1em;
   }
+
   .reservatie-periode-toevoegen {
+    text-decoration: underline;
     margin-bottom: 1em;
     display: block;
   }
+
   .btn-reservatie {
     margin-bottom: 1em;
   }
+
   .btn-ready span:before {
     content: "\f058";
     position: absolute;
@@ -389,100 +468,113 @@
     line-height: 30px;
     font-size: 17px;
   }
+
   .recently-added td {
     -webkit-transition: background-color 500ms linear;
     -moz-transition: background-color 500ms linear;
     -o-transition: background-color 500ms linear;
     -ms-transition: background-color 500ms linear;
     transition: background-color 500ms linear;
-
   }
+
   .btn-reservatieperiode-toevoegen {
     margin: 0.25em 0 0.5em;
-
   }
+
   .module-title {
     line-height: 1.42857;
     font-weight: bold;
     border-bottom: 2px solid @border-color;
     padding: 5px;
   }
+
   .multiselect-container {
     position: absolute;
     list-style-type: none;
     margin: 0;
     padding: 0;
   }
+
   .multiselect-container .input-group {
     margin: 5px;
   }
+
   .multiselect-container > li {
     padding: 0;
   }
+
   .multiselect-container > li > a.multiselect-all label {
     font-weight: 700;
   }
+
   .multiselect-container > li.multiselect-group label {
     margin: 0;
     padding: 3px 20px;
     height: 100%;
     font-weight: 700;
   }
+
   .multiselect-container > li.multiselect-group-clickable label {
     cursor: pointer;
   }
+
   .multiselect-container > li > a {
     padding: 0;
   }
-/*  .multiselect-container > li > a > label {
-    margin: 0;
-    height: 100%;
-    cursor: pointer;
-    font-weight: 400;
-    padding: 3px 20px 3px 40px;
-  }*/
+
   .multiselect-container > li > a > label.radio,
   .multiselect-container > li > a > label.checkbox {
     margin: 0;
   }
+
   .filter .btn {
     padding: 6px 3px;
   }
+
   .btn-group > .btn-group:nth-child(2) > .multiselect.btn {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
   }
+
   .form-inline .multiselect-container label.checkbox,
   .form-inline .multiselect-container label.radio {
     padding: 3px 20px 3px 40px;
   }
+
   .form-inline .multiselect-container li a label.checkbox input[type=checkbox],
   .form-inline .multiselect-container li a label.radio input[type=radio] {
     margin-left: -20px;
     margin-right: 0;
   }
+
   .plaats-adres-ingeven {
     padding: 1em;
     margin-left: 1.5em;
     background-color: @white;
     border: 1px solid @border-color;
   }
+
   .checkbox small {
     color: @gray;
   }
+
   .block-divider {
     border-bottom: 1px solid @border-color;
     padding: 0.5em 0;
   }
+
   .show-only-places {
     display: none;
   }
+
   .only-places .show-only-places {
     display: initial;
   }
+
   .only-places .hide-only-places {
     display: none;
   }
+
   .btn-tile {
     display: inline-block;
     text-align: left;
@@ -570,9 +662,6 @@
     .select-main-image {
       display: none;
     }
-  }
-  a:not(.btn) {
-    text-decoration: underline;
   }
 
   input.has-error {
