--- a/src/event_form/components/price-info/priceInfo.html
+++ b/src/event_form/components/price-info/priceInfo.html
@@ -70,14 +70,20 @@
                   Gratis
                 </span>
                 <span ng-if="priceInfo.price !== 0">
-                  <input type="number"
+                  <div class="form-inline">
+                    <div class="form-group">
+                      <input type="number"
                        class="form-control"
                        name="price"
                        ng-model="priceInfo.price"
                        ng-model-options="{ updateOn: 'blur' }"
                        ng-class="{ 'has-error': priceInfoForm.price.$invalid && formPriceSubmitted}"
                        required />
-                  euro
+                     </div>
+                     <div class="form-group">
+                       euro
+                     </div>
+                  </div>
                 </span>
               </td>
               <td ng-switch on="priceInfo.price"
@@ -90,9 +96,9 @@
                    ng-switch-default>Gratis</a>
               </td>
               <td class="col-xs-1">
-                <span aria-hidden="true"
-                      ng-click="$ctrl.deletePriceItem(key)"
-                      ng-if="$ctrl.showPriceDelete(key)">&times;</span>
+                <a aria-hidden="true"
+                    ng-click="$ctrl.deletePriceItem(key)"
+                    ng-if="$ctrl.showPriceDelete(key)" class="close">&times;</a>
               </td>
             </tr>
             <tr>
