III-1333: Make udb-time input fields required to prevent "invalid date"

--- a/src/event_form/components/calendartypes/event-form-timestamp.html
+++ b/src/event_form/components/calendartypes/event-form-timestamp.html
@@ -22,6 +22,7 @@
           <div class="beginuur-invullen" ng-show="timestamp.showStartHour">
             <input udb-time
                    type="time"
+                   required="required"
                    class="form-control uur"
                    ng-model="timestamp.startHourAsDate"
                    ng-change="hoursChanged(timestamp)"
@@ -41,6 +42,7 @@
           <div class="einduur-invullen" ng-show="timestamp.showEndHour">
             <input udb-time
                    type="time"
+                   required="required"
                    class="form-control uur"
                    ng-model="timestamp.endHourAsDate"
                    ng-change="hoursChanged(timestamp)"
