--- a/src/event_form/components/calendartypes/event-form-timestamp.html
+++ b/src/event_form/components/calendartypes/event-form-timestamp.html
@@ -26,6 +26,7 @@
                    class="form-control uur"
                    ng-model="timestamp.startHourAsDate"
                    ng-change="hoursChanged(timestamp)"
+                   ng-model-options="{ debounce: 500 }"
                    placeholder="Bv. 08:00"
                    focus-if="timestamp.showStartHour"/>
           </div>
@@ -46,6 +47,7 @@
                    class="form-control uur"
                    ng-model="timestamp.endHourAsDate"
                    ng-change="hoursChanged(timestamp)"
+                   ng-model-options="{ debounce: 500 }"
                    placeholder="Bv. 23:00"
                    focus-if="timestamp.showEndHour"/>
           </div>
