--- a/src/styles/event-detail.less
+++ b/src/styles/event-detail.less
@@ -57,9 +57,14 @@ h2.block-header {
   white-space: pre-line;
 }
 
-img.offer-image-thumbnail {
+img.offer-image-main {
   max-width: 400px;
   max-height: 300px;
+}
+
+img.offer-image-thumbnail {
+  margin-top: 10px;
+  margin-right: 10px;
 }
 
 table.event-detail-price-table {
