--- a/src/styles/event-detail.less
+++ b/src/styles/event-detail.less
@@ -65,6 +65,7 @@ img.offer-image-main {
 img.offer-image-thumbnail {
   margin-top: 10px;
   margin-right: 10px;
+  display: inline !important;
 }
 
 table.event-detail-price-table {
