--- a/src/styles/event-detail.less
+++ b/src/styles/event-detail.less
@@ -57,14 +57,10 @@ h2.block-header {
   white-space: pre-line;
 }
 
-img.offer-image-main {
-  max-width: 400px;
-  max-height: 300px;
-}
-
 img.offer-image-thumbnail {
   margin-top: 10px;
   margin-right: 10px;
+  display: inline !important;
 }
 
 table.event-detail-price-table {
