III-1729 frontend changes add organizer

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -750,11 +750,10 @@
   text-transform: uppercase;
 }
 
-#gemeente-kiezer,
-#locatie-kiezer {
-  min-height: 100px;
-}
-
 #titel .help-block {
   max-width: 450px; // corresponds to linelength of +/- 65 characters
+}
+
+.organizer-form .alert-link {
+  text-decoration: underline;
 }
