--- a/src/event_form/components/organizer/event-form-organizer-modal.html
+++ b/src/event_form/components/organizer/event-form-organizer-modal.html
@@ -7,19 +7,23 @@
 <div class="modal-body">
 
   <section ng-hide="organizersFound">
-    <form name="organizerForm" class="css-form">
-        <div class="form-group" ng-class="{'has-error' : showWebsiteValidation && organizerForm.website.$error.required }">
-            <label>Website</label>
-            <input type="url"
-                   name="website"
-                   class="form-control"
-                   ng-model="newOrganizer.website"
-                   ng-change="validateWebsite()"
-                   autocomplete="off"
-                   required> <i class="fa fa-circle-o-notch fa-spin" ng-show="showWebsiteValidation"></i>
-            <p class="alert alert-info" ng-hide="organizersWebsiteFound">Om organisaties in de UiTdatabank uniek bij te houden, vragen we elke organisatie een unieke & geldige hyperlink.</p>
-            <p class="alert alert-warning" ng-show="organizersWebsiteFound">Dit adres is al gebruikt door de organisatie '<span ng-bind="firstOrganizerFound.name"></span>'. Geef een unieke website of <a ng-click="selectOrganizer(firstOrganizerFound)">gebruik <span ng-bind="firstOrganizerFound.name"></span> als organisatie</a>.</p>
-        </div>
+    <form name="organizerForm" class="organizer-form">
+      <p class="alert alert-info">Om organisaties in de UiTdatabank uniek bij te houden, vragen we elke organisatie een unieke & geldige hyperlink.</p>
+      <div class="form-group" ng-class="{'has-error' : showWebsiteValidation && organizerForm.website.$error.required }">
+        <label>Website</label>
+        <input type="url"
+               name="website"
+               class="form-control"
+               ng-model="newOrganizer.website"
+               ng-change="validateWebsite()"
+               autocomplete="off"
+               required>
+         <i class="fa fa-circle-o-notch fa-spin" ng-show="showWebsiteValidation"></i>
+      </div>
+
+      <div class="form-group">
+        <p class="alert alert-warning" ng-show="organizersWebsiteFound">Dit adres is al gebruikt door de organisatie '<span ng-bind="firstOrganizerFound.name"></span>'. Geef een unieke website of <a ng-click="selectOrganizer(firstOrganizerFound)" class="alert-link" href="#">gebruik <span ng-bind="firstOrganizerFound.name"></span> als organisatie</a>.</p>
+      </div>
 
       <div class="form-group" ng-class="{'has-error' : showValidation && organizerForm.name.$error.required }">
         <label>Naam</label>
@@ -30,53 +34,48 @@
         </span>
       </div>
 
-      <div class="row">
-
-        <div class="col-xs-12">
-          <div class="form-group">
-            <label>Straat en nummer</label>
-            <input type="text" class="form-control" name="street" ng-model="newOrganizer.address.streetAddress">
-          </div>
-        </div>
-
+      <div class="form-group">
+        <label>Straat en nummer</label>
+        <input type="text" class="form-control" name="street" ng-model="newOrganizer.address.streetAddress">
       </div>
 
-      <div class="row">
-         <div class="col-xs-12">
-          <label for="organizer-gemeente-autocomplete" id="gemeente-label" ng-hide="selectedCity !== ''">
-            Kies een gemeente
-          </label>
-          <div id="gemeente-kiezer" ng-hide="selectedCity !== ''">
-            <span style="position: relative; display: inline-block; direction: ltr;" class="twitter-typeahead">
-              <input id="organizer-gemeente-autocomplete"
-                     type="text"
-                     class="form-control uib-typeahead"
-                     placeholder="Gemeente of postcode"
-                     ng-model="cityAutocompleteTextField"
-                     uib-typeahead="city as city.zip + ' ' + city.name for city in cities | filter:filterCities($viewValue) | orderBy:orderByLevenshteinDistance($viewValue)"
-                     typeahead-on-select="selectCity($item, $label)"
-                     typeahead-min-length="2"
-                     typeahead-template-url="templates/city-suggestion.html"
-                     autocomplete="off">
-            </span>
-            <div class="alert alert-danger" role="alert" ng-show="cityAutoCompleteError">
-              Er was een probleem tijdens het ophalen van de steden
-            </div>
-          </div>
-          <div id="gemeente-gekozen" ng-if="selectedCity">
-            <span class="btn-chosen" id="gemeente-gekozen-button" ng-bind="::selectedCity"></span>
-            <a href="" class="btn btn-default btn-link" ng-click="changeCitySelection()">Wijzigen</a>
+      <div class="form-group">
+        <label for="organizer-gemeente-autocomplete" id="gemeente-label" ng-hide="selectedCity !== ''">
+          Gemeente
+        </label>
+        <div id="gemeente-kiezer" ng-hide="selectedCity !== ''">
+          <span style="position: relative; display: inline-block; direction: ltr;" class="twitter-typeahead">
+            <input id="organizer-gemeente-autocomplete"
+                   type="text"
+                   class="form-control uib-typeahead"
+                   placeholder="Gemeente of postcode"
+                   ng-model="cityAutocompleteTextField"
+                   uib-typeahead="city as city.zip + ' ' + city.name for city in cities | filter:filterCities($viewValue) | orderBy:orderByLevenshteinDistance($viewValue)"
+                   typeahead-on-select="selectCity($item, $label)"
+                   typeahead-min-length="2"
+                   typeahead-template-url="templates/city-suggestion.html"
+                   autocomplete="off">
+          </span>
+          <div class="alert alert-danger" role="alert" ng-show="cityAutoCompleteError">
+            Er was een probleem tijdens het ophalen van de steden.
           </div>
         </div>
       </div>
 
-      <h2>Contact</h2>
+      <div class="form-group" id="gemeente-gekozen" ng-if="selectedCity">
+        <span class="btn-chosen" id="gemeente-gekozen-button" ng-bind="::selectedCity"></span>
+        <a href="#" class="btn btn-default btn-link" ng-click="changeCitySelection()">Wijzigen</a>
+      </div>
+
+      <div class="form-group">
+        <p><strong>Contact</strong></p>
+      </div>
 
       <div ng-show="newOrganizer.contact.length === 0">
         <ul class="list-unstyled">
-          <li><a ng-click="addOrganizerContactInfo('url')">Website toevoegen</a></li>
-          <li><a ng-click="addOrganizerContactInfo('phone')">Telefoonnummer toevoegen</a></li>
-          <li><a ng-click="addOrganizerContactInfo('email')">E-mailadres toevoegen</a></li>
+          <li><a ng-click="addOrganizerContactInfo('phone')" href="#">Telefoonnummer toevoegen</a></li>
+          <li><a ng-click="addOrganizerContactInfo('email')" href="#">E-mailadres toevoegen</a></li>
+          <li><a ng-click="addOrganizerContactInfo('url')" href="#">Andere website toevoegen</a></li>
         </ul>
       </div>
 
@@ -116,7 +115,7 @@
             </button>
           </td>
         </tr>
-        <tr><td colspan="3"><a ng-click="addOrganizerContactInfo('url')">Meer contactgegevens toevoegen</a></td></tr>
+        <tr><td colspan="3"><a ng-click="addOrganizerContactInfo('url')" href="#">Meer contactgegevens toevoegen</a></td></tr>
       </table>
     </form>
   </section>
