III-1405: Form audience controller and API specs

--- a/src/event_form/components/audience/form-audience.html
+++ b/src/event_form/components/audience/form-audience.html
@@ -1,4 +1,4 @@
-<div class="row audience" ng-if="::fac.formData.isEvent">
+<div class="row audience" ng-if="::fac.enabled">
     <div class="extra-task state-complete">
         <div class="col-sm-3">
             <em class="extra-task-label">Toegang</em>
