III-1736: Duplication module and components

--- a/src/dashboard/components/dashboard-item.directive.html
+++ b/src/dashboard/components/dashboard-item.directive.html
@@ -22,6 +22,9 @@
       </li>
       <li class="divider"></li>
       <li role="menuitem">
+        <a ui-sref='duplication.event({id: event.id})'>Kopiëren en aanpassen</a>
+      </li>
+      <li role="menuitem">
         <a href="" ng-click="dash.openDeleteConfirmModal(event)">Verwijderen</a>
       </li>
     </ul>
