--- a/src/event_form/components/calendartypes/event-form-timestamp.html
+++ b/src/event_form/components/calendartypes/event-form-timestamp.html
@@ -25,7 +25,7 @@
                    required="required"
                    class="form-control uur"
                    ng-model="timestamp.startHourAsDate"
-                   ng-change="hoursChanged(timestamp)"
+                   ng-blur="hoursChanged(timestamp)"
                    ng-model-options="{ debounce: 500 }"
                    placeholder="Bv. 08:00"
                    focus-if="timestamp.showStartHour"/>
@@ -46,7 +46,7 @@
                    required="required"
                    class="form-control uur"
                    ng-model="timestamp.endHourAsDate"
-                   ng-change="hoursChanged(timestamp)"
+                   ng-blur="hoursChanged(timestamp)"
                    ng-model-options="{ debounce: 500 }"
                    placeholder="Bv. 23:00"
                    focus-if="timestamp.showEndHour"/>
