III-1736: Wrap migration in a conditional step

--- a/src/duplication/event-duplication-footer.component.html
+++ b/src/duplication/event-duplication-footer.component.html
@@ -2,5 +2,5 @@
     <a class="btn btn-success"
        ui-sref="split.eventEdit({id: duplication.eventId})"
        role="button"
-       ng-class="{disabled: !duplication.readyToEdit()}">Duplicaat aanmaken</a>
+       ng-class="{disabled: !duplication.readyToEdit()}">Kopiëren en aanpassen</a>
 </div>
