III-1333 show togle of start and endHour only when a valid date is selected

--- a/src/event_form/components/calendartypes/event-form-timestamp.html
+++ b/src/event_form/components/calendartypes/event-form-timestamp.html
@@ -9,7 +9,8 @@
            highlight-extra-class="{{calendarHighlight.extraClass}}"
            ng-model="timestamp.date"></div>
 
-      <div class="row">
+      <div class="row"
+           ng-show="isValidDate(timestamp.date)">
         <div class="col-xs-6">
           <label>
             <input type="checkbox"
