--- a/src/event_form/components/openinghours/event-form-openinghours.html
+++ b/src/event_form/components/openinghours/event-form-openinghours.html
@@ -1,9 +1,9 @@
-<div class="col-xs-12" ng-hide="hasOpeningHours">
+<div class="col-xs-12" ng-hide="!!eventFormData.openingHours.length">
   <a href="#" class="btn btn-link btn-plus wanneer-openingsuren-link"
      data-toggle="modal" data-target="#wanneer-openingsuren-toevoegen">Openingsuren toevoegen</a>
 </div>
 
-<div class="col-xs-12 col-sm-8" ng-show="hasOpeningHours">
+<div class="col-xs-12 col-sm-8" ng-show="!!eventFormData.openingHours.length">
   <section class="wanneer-openingsuren-resultaat">
     <table class="table table-condensed ">
       <thead>
@@ -52,7 +52,7 @@
                       udb-multiselect
                       start-label="Kies dag(en)"
                       ng-model="openingHour.dayOfWeek"
-                      ng-change="saveOpeningHourDaySelection(i, openingHour.dayOfWeek)">
+                      ng-change="eventFormData.saveOpeningHourDaySelection(i, openingHour.dayOfWeek)">
                 <option value="monday">maandag</option>
                 <option value="tuesday">dinsdag</option>
                 <option value="wednesday">woensdag</option>
