III-1736: Emit duplicate timing changed event and listen in footer

--- a/src/duplication/event-duplication-footer.component.html
+++ b/src/duplication/event-duplication-footer.component.html
@@ -1,6 +1,6 @@
 <div class="event-validation">
-    <a class="btn btn-success"
-       ui-sref="split.eventEdit({id: duplication.eventId})"
-       role="button"
-       ng-class="{disabled: !duplication.readyToEdit()}">Kopiëren en aanpassen</a>
+    <button class="btn btn-success"
+            ng-click="duplication.duplicate()"
+            role="button"
+            ng-class="{disabled: !duplication.readyForDuplication()}">Kopiëren en aanpassen</button>
 </div>
