III-1736: Event Duplicator service and controller integration

--- a/src/duplication/event-duplication-footer.component.html
+++ b/src/duplication/event-duplication-footer.component.html
@@ -2,5 +2,5 @@
     <button class="btn btn-success"
             ng-click="duplication.duplicate()"
             role="button"
-            ng-class="{disabled: !duplication.readyForDuplication()}">Kopiëren en aanpassen</button>
+            ng-class="{disabled: !duplication.readyForDuplication}">Kopiëren en aanpassen</button>
 </div>
