--- a/src/dashboard/components/dashboard-item.directive.html
+++ b/src/dashboard/components/dashboard-item.directive.html
@@ -21,7 +21,7 @@
         <a ng-href="{{ event.url  + '/preview' }}">Voorbeeld</a>
       </li>
       <li class="divider"></li>
-      <li role="menuitem">
+      <li role="menuitem" ng-if="offerType === 'event'">
         <a ui-sref='duplication.event({id: event.id})'>Kopiëren en aanpassen</a>
       </li>
       <li role="menuitem">
